--- a/src/app/components/shared/movie-poster/movie-poster.component.html
+++ b/src/app/components/shared/movie-poster/movie-poster.component.html
@@ -27,7 +27,7 @@
   <div class="top-center" *appUserIn>
     <button mat-mini-fab [ngClass]="{ active: itemSelected(id), noActive: !itemSelected(id) }"
       (click)="selectMovie(id)">
-      <mat-icon>check_circle</mat-icon>
+      <mat-icon>favorite</mat-icon>
     </button>
   </div>
 </ng-container>
