--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -2,7 +2,7 @@
 .slider-main {
   color: white;
   /* background-color: #29363d; */
-  background-color: #e1e1e1;
+  background-color: #151b1e;
   width: 100vw;
   position: relative;
   margin-left: -50vw;
