--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -6,19 +6,27 @@
     </div>
   </div>
   <div class="main-content" id="main-container">
-    <div class="row container mb-3" *ngIf="loading">
+    <!-- <div class="row container mb-3" *ngIf="loading">
       <mat-progress-bar mode="query" color="primary"></mat-progress-bar>
-    </div>
+    </div> -->
     <div class="row mb-2">
       <div class="col-md-12 mb-2">
-        <button mat-raised-button color="primary" (click)="openDialog()" *appUserIn="true">
+        <button
+          mat-raised-button
+          color="primary"
+          (click)="openDialog()"
+          *appUserIn="true"
+        >
           Crear lista
         </button>
       </div>
       <div class="col-md-6">
         <mat-form-field appearance="fill">
           <mat-label>Ordenar por</mat-label>
-          <mat-select (selectionChange)="sortBy($event)" [disabled]="loading || genre">
+          <mat-select
+            (selectionChange)="sortBy($event)"
+            [disabled]="loading || genre"
+          >
             <mat-option *ngFor="let option of sortOptions" [value]="option.id">
               {{ option.value }}
             </mat-option>
@@ -28,7 +36,10 @@
       <div class="col-md-6">
         <mat-form-field appearance="fill">
           <mat-label>Género</mat-label>
-          <mat-select (selectionChange)="selectGenre($event)" [disabled]="loading">
+          <mat-select
+            (selectionChange)="selectGenre($event)"
+            [disabled]="loading"
+          >
             <mat-option>Todos</mat-option>
             <mat-option *ngFor="let genre of genres" [value]="genre.id">
               {{ genre.name }}
@@ -37,11 +48,19 @@
         </mat-form-field>
       </div>
     </div>
-    <div class="row row-cols-2 row-cols-md-6" *ngIf="moviesToDisplay.length > 0">
+    <div
+      class="row row-cols-2 row-cols-md-6"
+      *ngIf="moviesToDisplay.length > 0"
+    >
       <div class="col" *ngFor="let movie of moviesToDisplay">
         <div class="card border-0 h-100">
-          <app-movie-poster [imgSrc]="movie | imageSrc" [vote_average]="movie.vote_average" [selectButton]="true"
-            [release_date]="movie.release_date" [id]="movie.id">
+          <app-movie-poster
+            [imgSrc]="movie | imageSrc"
+            [vote_average]="movie.vote_average"
+            [selectButton]="true"
+            [release_date]="movie.release_date"
+            [id]="movie.id"
+          >
           </app-movie-poster>
           <div class="card-body">
             <h5 class="card-title fs-6 lh-sms">{{ movie.title }}</h5>
@@ -61,16 +80,31 @@
     </div>
   </div>
   <ng-container *ngIf="!genre">
-    <app-paginator [index]="index" [pagesArray]="pagesArray" [totalPages]="totalPages"
-      (newIndexValue)="sliceListMovies(true, $event)"></app-paginator>
+    <app-paginator
+      [index]="index"
+      [pagesArray]="pagesArray"
+      [totalPages]="totalPages"
+      (newIndexValue)="sliceListMovies(true, $event)"
+    ></app-paginator>
   </ng-container>
   <ng-container *ngIf="genre">
-    <app-paginator [index]="index" [pagesArray]="pagesArray2" [totalPages]="totalPages"
-      (newIndexValue)="sliceListMovies2(true, $event)"></app-paginator>
+    <app-paginator
+      [index]="index"
+      [pagesArray]="pagesArray2"
+      [totalPages]="totalPages"
+      (newIndexValue)="sliceListMovies2(true, $event)"
+    ></app-paginator>
   </ng-container>
   <ng-container *ngIf="!loading">
     <app-movies-list-button *appUserIn></app-movies-list-button>
   </ng-container>
   <app-whats-app-button></app-whats-app-button>
 </div>
-<app-loadingcomponent *ngIf="loading"></app-loadingcomponent>
+<!-- <app-loadingcomponent *ngIf="loading"></app-loadingcomponent> -->
+<div class="container pt-5" *ngIf="loading">
+  <h1 class="text-center mb-3">Cargando...</h1>
+  <app-loading-with-percent
+    [listMovies]="listMovies"
+    [total_results]="total_results"
+  ></app-loading-with-percent>
+</div>
