--- a/src/app/components/shared/movies-list-button/dialoglistcontent/dialoglistcontent.component.css
+++ b/src/app/components/shared/movies-list-button/dialoglistcontent/dialoglistcontent.component.css
@@ -7,3 +7,54 @@
 .example-full-width {
   width: 100%;
 }
+
+.listContainer {
+  overflow-y: auto;
+  height: 90vh;
+  max-height: 90vh;
+  overflow-x: hidden;
+  position: relative;
+}
+
+.content {
+  overflow-y: auto;
+  height: 70vh;
+  max-height: 70vh;
+  overflow-x: hidden;
+  position: relative;
+}
+
+.bottom {
+  position: absolute;
+  bottom: 2.5vh !important;
+  right: 0;
+}
+
+.form-control {
+  border: 3px solid lightgray;
+}
+
+@media (min-width: 1200px) {
+  .listContainer {
+    width: 25vw;
+  }
+}
+
+@media (max-width: 800px) {
+  .listContainer {
+    overflow-y: hidden;
+  }
+  .content {
+    height: 55vh;
+    max-height: 55vh;
+  }
+  .bottom {
+    bottom: 3vh !important;
+  }
+  .line {
+    border-bottom: 1px dotted black;
+    padding-bottom: 0.5rem;
+    padding-top: 0.5rem;
+    font-size: 0.75rem !important;
+  }
+}
